--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	compile('com.fasterxml.jackson.core:jackson-annotations:2.7.2')
 	compile('com.fasterxml.jackson.core:jackson-databind:2.7.2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.springframework.batch:spring-batch-test:3.0.6.RELEASE')
 }
 
 
